--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ jar {
 }
 
 dependencies {
+    compile group: 'org.camunda.bpm.model', name: 'camunda-bpmn-model', version: '7.5.0-alpha4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
