--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,23 @@ apply plugin: 'application'
 
 mainClassName = 'de.niklaskiefer.bpmnncl.MainApplication'
 
-jar {
-    baseName = 'bpmnNCL-gradle'
-    version =  '0.1.0'
-}
-
 dependencies {
     compile group: 'org.camunda.bpm.model', name: 'camunda-bpmn-model', version: '7.5.0-alpha4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+run {
+    standardInput = System.in
+}
+
+jar {
+    baseName = 'bpmnNCL-gradle'
+    version =  '0.1.0'
+    // put dependencies to jar
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    manifest {
+        attributes 'Main-Class': 'de.niklaskiefer.bpmnncl.MainApplication'
+    }
 }
 
 task wrapper(type: Wrapper) {
