--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'bpmnNCL'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -36,3 +37,12 @@ jar {
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+
+check.dependsOn jacocoTestReport
