--- a/web/build.gradle
+++ b/web/build.gradle
@@ -25,12 +25,13 @@ repositories {
 
 apply plugin: 'application'
 
-mainClassName = 'de.niklaskiefer.bncldemo.MainApplication'
+mainClassName = 'de.niklaskiefer.bnclDemo.MainApplication'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':core')
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-devtools")
     compile group: "log4j", name: "log4j", version: "1.2.17"
     testCompile group: 'junit', name: 'junit', version: '4.11'
@@ -48,7 +49,7 @@ jar {
     // put dependencies to jar
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest {
-        attributes 'Main-Class': 'de.niklaskiefer.bncldemo.MainApplication'
+        attributes 'Main-Class': 'de.niklaskiefer.bnclDemo.MainApplication'
     }
 }
 
