--- a/web/build.gradle
+++ b/web/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-devtools")
+    compile("org.springframework.boot:spring-boot-starter-data-mongodb")
     compile group: "log4j", name: "log4j", version: "1.2.17"
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.3.6.RELEASE'
