change mongo start script

--- a/docker/bncl-demo/Dockerfile
+++ b/docker/bncl-demo/Dockerfile
@@ -5,4 +5,4 @@ RUN apt-get update && apt-get install -y git && git clone https://github.com/pin
 WORKDIR bncl
 RUN git checkout develop && ./gradlew build
 EXPOSE 8080
-CMD java -jar -Durl=mongodb web/build/libs/bnclDemo-0.1.0.jar
+CMD java -Durl=mongodb -jar web/build/libs/bnclDemo-0.1.0.jar
