--- a/web/build.gradle
+++ b/web/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.7.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.4.0")
     }
 }
 
@@ -35,8 +35,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-devtools")
     compile group: "log4j", name: "log4j", version: "1.2.17"
-    testCompile group: 'junit', name: 'junit', version: '4.13'
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.7.RELEASE'
+    testCompile group: 'junit', name: 'junit', version: '4.13.1'
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.4.0'
 
 }
 
@@ -55,7 +55,7 @@ jar {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '5.2.1'
+    gradleVersion = '6.5.0'
 }
 
 task stage {
