--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,6 @@ jobs:
         run: ./gradlew build
       - name: Execute tests
         run: ./gradlew check
+      - name: Upload coverage
+        run: curl -s https://codecov.io/bash | bash
+        shell: bash
